--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -18,9 +18,9 @@
 </table>
 
 <div>
-<%= link_to "Upvote", upvote_movie_path, :method => :patch %>
+<%= button_to "Upvote", upvote_movie_path, method: :patch %>
 <%= link_to "Edit", edit_movie_path %>
-<%= link_to "Delete", delete_movie_path, :method => :delete %>
+<%= button_to "Delete", delete_movie_path, method: :delete %>
 <%= link_to "View All Movies", movies_path %>
 <%= link_to "View All Media", root_path %>
 </div>
