--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,12 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Raleway:900' rel='stylesheet' type='text/css'>
   <!-- width of the content should be the width of the device: -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
-  <h1>Media Ranker</h1>
-</header>
+  <h1><%=link_to "Media Ranker", root_path %></h1>
 <body>
 
   <div class="container">
@@ -27,6 +27,5 @@
 
     </div>
   </div>
-
 </body>
 </html>
