--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,6 +1,3 @@
-<%= form_for @album, url: {action: "create"} do |f| %>
-<%= f.text_field :name %>
-<%= f.text_area :description %>
-<%= f.text_field :artist %>
-<%= f.submit "Add Album" %>
-<% end %>
+<h2>Edit <%= @album.name %></h2>
+
+<%= render "album_form" %>
