--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,3 @@
-Add Book
+<h2>Add Book</h2>
 
-<%= form_for @book, url: {action: "create"} do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_area :description %>
-  <%= f.text_field :author %>
-  <%= f.submit "Add Book" %>
-<% end %>
+<%= render "book_form" %>
