--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,26 +1,29 @@
-<div class="row">
-  <div class="col-md-4">
-    <h2>Movies</h2>
-    <% @movies_array.each do |movie| %>
-      <%= movie.rank %>
-      <%= link_to movie.name, "/movies/#{movie.id}" %><br/>
-    <% end %>
-    <div><%= link_to "View All Movies", movies_path %></div>
-  </div>
-  <div class="col-md-4">
-    <h2>Books</h2>
-    <% @books_array.each do |book| %>
-      <%= book.rank %>
-      <%= link_to book.name, "/books/#{book.id}" %><br/>
-    <% end %>
-    <div><%= link_to "Add New Book", add_book_path %></div>
-  </div>
-  <div class="col-md-4">
-    <h2>Albums</h2>
-    <% @albums_array.each do |album| %>
-      <%= album.rank %>
-      <%= link_to album.name, "/albums/#{album.id}" %><br/>
-    <% end %>
-    <div><%= link_to "Add New Album", add_album_path %></div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4 col-xs-12 home-column">
+      <h2>Top Movies</h2>
+      <% @top_five_movies.each do |movie| %>
+        <span class="badge">Ranking: <%= movie.rank %></span>
+        <%= link_to movie.name, "/movies/#{movie.id}" %><br/>
+      <% end %>
+      <%= link_to "View All Movies", movies_path, class: "btn btn-default home-button" %>
+    </div>
+    <div class="col-sm-4 col-xs-12 home-column">
+      <h2>Top Books</h2>
+      <% @top_five_books.each do |book| %>
+        <span class="badge">Ranking: <%= book.rank %></span>
+        <%= link_to book.name, "/books/#{book.id}" %><br/>
+      <% end %>
+      <%= link_to "View All Books", books_path, class: "btn btn-default home-button" %>
+    </div>
+    <div class="col-sm-4 col-xs-12 home-column">
+      <h2>Top Albums</h2>
+      <% @top_five_albums.each do |album| %>
+        <span class="badge">Ranking: <%= album.rank %></span>
+        <%= link_to album.name, "/albums/#{album.id}" %><br/>
+      <% end %>
+      <%= link_to "View All Albums", albums_path, class: "btn btn-default home-button" %>
+    </div>
   </div>
 </div>
