--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,8 +1,3 @@
-Edit Movie
+<h2>Edit <%=@movie.name %></h2>
 
-<%= form_for @movie, url: {action: "update"} do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_area :description %>
-  <%= f.text_field :director %>
-  <%= f.submit "Update Movie" %>
-<% end %>
+<%= render "movie_form" %>
