--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,8 +1,3 @@
-Add Movie
+<h2>Add Movie</h2>
 
-<%= form_for @movie, url: {action: "create"} do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_area :description %>
-  <%= f.text_field :director %>
-  <%= f.submit "Add Movie" %>
-<% end %>
+<%= render "movie_form" %>
